--- a/Python_Exercise_1.ipynb
+++ b/Python_Exercise_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Exercise 1",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQdmNusPh23lSRR26rv8ok",
+      "authorship_tag": "ABX9TyPjaT12xU22LIB12KsTrVox",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,22 +43,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OkM8pmcd7zc4",
-        "outputId": "b00412d0-127b-4202-c700-53b84530b2d8"
+        "outputId": "9aa74822-df2e-4424-9fbc-8db94b7469f6"
       },
       "source": [
         "#numpy\n",
         "import numpy as np\n",
-        "A = np.array([-5,0,4,1])\n",
-        "B = np.array([6,-3,2,3])\n",
-        "print(A+B)"
+        "A = np.array([[-5,0],[4,1]])\n",
+        "B = np.array([[6,-3],[2,3]])\n",
+        "print(A+B)\n",
+        "\n",
+        "#sum = A +B"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ 1 -3  6  4]\n"
+            "[[ 1 -3]\n",
+            " [ 6  4]]\n"
           ]
         }
       ]
@@ -70,22 +73,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xzuqQZtB8jiA",
-        "outputId": "72589367-6df1-41f6-d596-2c39da6589e5"
+        "outputId": "8f500d6b-a881-4dca-825e-c4e11934bb92"
       },
       "source": [
         "#numpy\n",
         "import numpy as np\n",
-        "a = np.array([-5,0,4,1])\n",
-        "b = np.array([6,-3,2,3])\n",
-        "print(B-A)"
+        "A = np.array([[-5,0],[4,1]])\n",
+        "B = np.array([[6,-3],[2,3]])\n",
+        "print(B-A)\n",
+        "\n",
+        "#difference1 = B - A"
       ],
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[11 -3 -2  2]\n"
+            "[[11 -3]\n",
+            " [-2  2]]\n"
           ]
         }
       ]
@@ -97,22 +103,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FjCcGRNF8vBc",
-        "outputId": "ba24bb3d-6ad9-4eff-e66f-475f1297f1b1"
+        "outputId": "4d513fcd-c582-4713-cd16-0bce5f5344aa"
       },
       "source": [
         "#numpy\n",
         "import numpy as np\n",
-        "a = np.array([-5,0,4,1])\n",
-        "b = np.array([6,-3,2,3])\n",
-        "print(A-B)"
+        "A = np.array([[-5,0],[4,1]])\n",
+        "B = np.array([[6,-3],[2,3]])\n",
+        "print(A-B)\n",
+        "\n",
+        "#difference2 = A - B"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[-11   3   2  -2]\n"
+            "[[-11   3]\n",
+            " [  2  -2]]\n"
           ]
         }
       ]
