--- a/Practical_Lab_Exam_1.ipynb
+++ b/Practical_Lab_Exam_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Practical Lab Exam 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOn3vgjnn84rEviUiqa9vGj",
+      "authorship_tag": "ABX9TyMdFRN5ufwvf43AEkmdaF97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,26 +145,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sPBHHyZOsyDB",
-        "outputId": "34e42a36-a804-4996-ed87-e651fcb79121"
+        "outputId": "3651d417-b00b-4d86-be29-5d35dba76455"
       },
       "source": [
         "T = np.array([5,3,-1])\n",
         "\n",
         "print(T)\n",
-        "print(T.size)\n",
-        "print(T.shape)\n",
-        "print(T.ndim)"
+        "print(\"Type:     \", T.dtype)\n",
+        "print(\"Size:      \", T.size)\n",
+        "print(\"Shape:    \", T.shape)\n",
+        "print(\"Dimension: \", T.ndim)"
       ],
-      "execution_count": 52,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[ 5  3 -1]\n",
-            "3\n",
-            "(3,)\n",
-            "1\n"
+            "Type:      int64\n",
+            "Size:       3\n",
+            "Shape:     (3,)\n",
+            "Dimension:  1\n"
           ]
         }
       ]
