--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Prelim Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyH5jej/KmBsMrIlqw6RvL",
+      "authorship_tag": "ABX9TyOEvOlLrziM+/dpVp3rsEOs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         "outputId": "ee1adc8d-2b40-40cb-bc77-8ec89dd47c02"
       },
       "source": [
-        "Double = 2*C\n",
+        "Double = 2*C  #Formula that doubles the value of each element\n",
         "print(Double)"
       ],
       "execution_count": 24,
@@ -124,7 +124,7 @@
         "A = np.array([2,7,4])\n",
         "B = np.array([3,9,8])\n",
         "\n",
-        "CP = np.cross(A,B)\n",
+        "CP = np.cross(A,B)  #Formula for computing cross product of A and B\n",
         "CP"
       ],
       "execution_count": 18,
