--- a/Prelim_Exam.ipynb
+++ b/Prelim_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Prelim Exam.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEvOlLrziM+/dpVp3rsEOs",
+      "authorship_tag": "ABX9TyMyr5E1TMafwwonDLuhff6R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "xrCdgp1mpmnk"
+      },
+      "source": [
+        "#PRELIM EXAM"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "eBUNiQw5h-co"
       },
       "source": [
-        "#Question 1"
+        "##Question 1"
       ]
     },
     {
@@ -70,7 +79,7 @@
         "id": "t6zVpBHaiZHY"
       },
       "source": [
-        "#Question 2\n",
+        "##Question 2\n",
         "\n",
         "\n"
       ]
@@ -108,7 +117,7 @@
         "id": "OVH_5_sNikSf"
       },
       "source": [
-        "#Question 3"
+        "##Question 3"
       ]
     },
     {
