--- a/Matrix_Algebra.ipynb
+++ b/Matrix_Algebra.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Matrix Algebra.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBUOJcC6PVTJv+DAnIyPTy",
+      "authorship_tag": "ABX9TyOIqirUCfC5+/K6dKDmzk4n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "invC = (np.linalg.inv(C))\n",
         "print(invC)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "DT = np.dot(A,invC)\n",
         "print(C)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "source": [
         ""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
         "print(B)\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
         "prd = np.dot(A,B)\n",
         "print(prd)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,15 +185,57 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "wnQZnJbQ8ud3"
+        "id": "526nrDej-tsf"
       },
       "source": [
-        ""
+        "#Coding Activity 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wnQZnJbQ8ud3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63a1138e-32d6-45af-9a06-398124783118"
+      },
+      "source": [
+        "# Create a Python Program to inverse and transpose a 4x4 matrix, A = ( [6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7] )\n",
+        "\n",
+        "print(\"Inverse\")\n",
+        "invA = np.array([[6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7]])\n",
+        "inA = (np.linalg.inv(invA))\n",
+        "print(inA)\n",
+        "\n",
+        "print(\"_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_\")\n",
+        "\n",
+        "print(\"Transpose\")\n",
+        "trA = np.array([[6,1,1,3],[4,-2,5,1],[2,8,7,6],[3,1,9,7]])\n",
+        "print(trA)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inverse\n",
+            "[[ 0.13368984  0.10695187  0.02139037 -0.09090909]\n",
+            " [-0.00229183  0.02673797  0.14820474 -0.12987013]\n",
+            " [-0.12987013  0.18181818  0.06493506 -0.02597403]\n",
+            " [ 0.11000764 -0.28342246 -0.11382735  0.23376623]]\n",
+            "_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_\n",
+            "Transpose\n",
+            "[[ 6  1  1  3]\n",
+            " [ 4 -2  5  1]\n",
+            " [ 2  8  7  6]\n",
+            " [ 3  1  9  7]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
