--- a/Matrix_Algebra.ipynb
+++ b/Matrix_Algebra.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Matrix Algebra.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIqirUCfC5+/K6dKDmzk4n",
+      "authorship_tag": "ABX9TyNE9O5V+bb28Vr8PIHIZ8Pz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,39 @@
             "[[ 1.00000000e+00  0.00000000e+00  2.77555756e-17]\n",
             " [-1.38777878e-17  1.00000000e+00  1.38777878e-17]\n",
             " [-4.16333634e-17  1.38777878e-16  1.00000000e+00]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VYAogx8KDjfv",
+        "outputId": "226526ba-1c1f-403d-9092-f8d0836c75ae"
+      },
+      "source": [
+        "##Python Program to Inverse a 3x3 Matrix A = ([6,1,1],[4,-2,5],[2,8,7])\n",
+        "A = np.array([[6,1,1],[4,-2,5],[2,8,7]])\n",
+        "print(A,\"\\n\")\n",
+        "B = np.transpose(A)\n",
+        "print(B)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 6  1  1]\n",
+            " [ 4 -2  5]\n",
+            " [ 2  8  7]] \n",
+            "\n",
+            "[[ 6  4  2]\n",
+            " [ 1 -2  8]\n",
+            " [ 1  5  7]]\n"
           ]
         }
       ]
