--- a/Midterm_Exam.ipynb
+++ b/Midterm_Exam.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Midterm Exam",
       "provenance": [],
-      "authorship_tag": "ABX9TyNC9Z3hfw3NYLn8pcUoC0eu",
+      "authorship_tag": "ABX9TyN099FN3XR0KzNb6yracQBZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb35f4fa-913f-4dfe-cf9d-74a35bd9eb94"
+        "outputId": "8f7411cb-3f88-4f2b-acee-c8bccf9d6e4b"
       },
       "source": [
         "print(\"given: \")\n",
@@ -246,20 +246,20 @@
         "print()\n",
         "\n",
         "print(\"Find the roots X\")\n",
-        "print(\"------------------\")\n",
+        "print(\"------------------------------\")\n",
         "#create arrays\n",
         "A = np.array([[5,4,1],[10,9,4],[10,13,15]])\n",
         "Answers = np.array([[3.4],[8.8],[19.2]])\n",
         "print(A)\n",
-        "print(\"------------------\")\n",
+        "print(\"------------------------------\")\n",
         "print(Answers)\n",
-        "print(\"------------------\")\n",
+        "print(\"------------------------------\")\n",
         "print(\"Inverse of A\")\n",
         "inv_A = np.linalg.inv(A)\n",
         "print(inv_A)\n",
-        "print(\"------------------\")\n",
+        "print(\"------------------------------\")\n",
         "print(\"Get the dot product of inv_A and Answers to find the roots\")\n",
-        "print(\"------------------\")\n",
+        "print(\"------------------------------\")\n",
         "\n",
         "\n",
         "#code to find the roots\n",
@@ -269,6 +269,7 @@
         "\n",
         "#proving\n",
         "print(\"To prove roots of X are correct\")\n",
+        "print(\"------------------------------\")\n",
         "#input the roots to all \"x\" variables\n",
         "\n",
         "X1 = 0.2 \n",
@@ -279,7 +280,7 @@
         "print(10*X1 + 9*X2 + 4*X3)\n",
         "print(10*X1 + 13*X2 + 15*X3)"
       ],
-      "execution_count": 59,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,27 +292,28 @@
             "10X1 + 13X2 + 15X3 = 19.2\n",
             "\n",
             "Find the roots X\n",
-            "------------------\n",
+            "------------------------------\n",
             "[[ 5  4  1]\n",
             " [10  9  4]\n",
             " [10 13 15]]\n",
-            "------------------\n",
+            "------------------------------\n",
             "[[ 3.4]\n",
             " [ 8.8]\n",
             " [19.2]]\n",
-            "------------------\n",
+            "------------------------------\n",
             "Inverse of A\n",
             "[[ 5.53333333 -3.13333333  0.46666667]\n",
             " [-7.33333333  4.33333333 -0.66666667]\n",
             " [ 2.66666667 -1.66666667  0.33333333]]\n",
-            "------------------\n",
+            "------------------------------\n",
             "Get the dot product of inv_A and Answers to find the roots\n",
-            "------------------\n",
+            "------------------------------\n",
             "These are the roots of 'X' \n",
             "[[0.2]\n",
             " [0.4]\n",
             " [0.8]]\n",
             "To prove roots of X are correct\n",
+            "------------------------------\n",
             "3.4000000000000004\n",
             "8.8\n",
             "19.2\n"
