--- a/Final_Exam.ipynb
+++ b/Final_Exam.ipynb
@@ -6,7 +6,7 @@
       "name": "Final Exam",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNu6BbkRdeGqF5S79N+v5kb",
+      "authorship_tag": "ABX9TyMmwHw3+bSYmkZfnEUApo0Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,17 @@
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "IQIGP1fJYCJb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np"
       ],
       "metadata": {
@@ -38,6 +49,15 @@
       },
       "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Problem 1"
+      ],
+      "metadata": {
+        "id": "B8wEJ6aLYACZ"
+      }
     },
     {
       "cell_type": "code",
@@ -130,6 +150,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Problem 3"
+      ],
+      "metadata": {
+        "id": "aUMe6zMcYDkM"
+      }
     },
     {
       "cell_type": "code",
